--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VoteHUB</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
 <body>
   <header>
+    <div class="logo" href="#">
+      <svg width="64px" height="64px" viewBox="-6.4 -6.4 76.80 76.80" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#F5F4F4" stroke-width="1.088" transform="matrix(1, 0, 0, 1, 0, 0)rotate(0)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.256"></g><g id="SVGRepo_iconCarrier"><polyline points="16 40 8 40 8 56 56 56 56 40 48 40"></polyline><polyline points="52 28 56 32 40 48"></polyline><polyline points="24 48 8 32 32 8 44 20"></polyline><line x1="16" y1="48" x2="48" y2="48"></line><polyline points="56 16 32 40 24 32"></polyline></g></svg>
+      <h3 class="name" style="margin:0; font-style: italic;">VoteHUB</h3>
+    </div>
+    <div>
+      <div class="dropdown">
+        <a class="btn btn-outline-light me-2 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <%= user.username %>
+        </a>
+      
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">My profile</a></li>
+          <li><a class="dropdown-item" style="color:red; cursor: pointer;">Log out</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
 
+    <% 
+        let a = 0;
+        while(a < info.length){
+        if(a != 0 && info[a].name == info[a-1].name){
+            %> 
+            <h1><%= info[a].option_text %></h1> 
+            <% votes.forEach(vote => {
+            if (vote.poll_id == info[a].poll_id){
+                if(vote.option_id == info[a].option_id){
+                %> <h1>dadadada</h1> <%
+        }}});
+        } else {
+            %>  
+            <h1><%= info[a].name %></h1> 
+            <h1><%= info[a].option_text %></h1>
+            <% votes.forEach(vote => {
+            if (vote.poll_id == info[a].poll_id){
+                if(vote.option_id == info[a].option_id){
+                %> <h1>dadadada</h1> <%
+        }}});
+        }
+        a++;
+    } %>
+
+<%- include('partials/footer.ejs'); -%>
 </body>
 </html>
 
