--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
 					<div class="row">
 						<form action="/login" method="post" class="form-group">
 							<div class="row">
-								<input type="text" name="username" id="username" class="form__input" placeholder="Username" autocomplete="off">
+								<input type="text" name="username" id="username" class="form__input" placeholder="Username or Email" autocomplete="off">
 							</div>
 							<div class="row">
 								<!-- <span class="fa fa-lock"></span> -->
