--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -4,6 +4,7 @@ body {
   font-weight: 400;
   font-style: normal;
   background-color: #F5F4F4;
+  /* za bck color F5F4F4 */
   color: #00303F;
 }
 
