--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
 <body>
   <header>
@@ -25,7 +25,7 @@
           <%= user.username %>
         </a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">My profile</a></li>
+          <li><a class="dropdown-item" href="/profile/<%= user.id %>">My profile</a></li>
           <form action="/logout" method="post">
             <li><input class="dropdown-item" style="color:red; cursor: pointer;" type="submit" value="Log out"></input></li>
           </form>
