--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -3,6 +3,7 @@
 
 <% if(vote.length > 0) { %>
    <h1>You already voted on this poll!</h1>
+   <h1>Poll creator <a href="/profile/<%= creator[0].id %>"><%= creator[0].username %></a></h1>
    <h1><%= poll[0].name %></h1>
    <form action="/vote" method="post">
    <% poll.forEach(option => { %> 
@@ -39,6 +40,7 @@
     </div>
 <% } 
 else {%>
+   <h1>Poll creator <%= creator[0].username %></h1>
    <h1><%= poll[0].name %></h1>
    <form action="/vote" method="post">
    <% poll.forEach(option => { %> 
